--- a/Enerpetrol1/style.css
+++ b/Enerpetrol1/style.css
@@ -16,6 +16,12 @@
 }
 .logo {
   padding-left: 2%;
+  
+}
+.image-logo {
+  width: 170px;
+  height: 100%;
+  
 }
 
 .nav-links{
@@ -29,7 +35,7 @@
   display: inline-block;
   text-decoration: none;
   color: black;
-  padding: 8px 35px;
+  padding: 10px 75px;
   border: 2px solid darkgreen;
 
 }
@@ -44,7 +50,7 @@
 }
 .nav-menu ul li a{
   text-decoration: none;
-  font-size: 18px;
+  font-size: 23px;
   color: black;
   text-transform: uppercase;
 }
@@ -59,7 +65,7 @@
   display: none;
   justify-content: space-between;
   flex-direction: column;
-  height: 22px;
+  height: 24px;
   width: 32px;
 }
 .toggle-btn .bar{
@@ -111,8 +117,6 @@
   }
 }
 
-
-/*---BUG:Find out why header isnt fully centered---*/
 .text-box {
   width: 100%;
   color: azure;
@@ -123,11 +127,11 @@
   text-align: center;
 }
 .text-box h1 {
-  font-size: 62px;
+  font-size: 60px;
 }
 .text-box p {
   margin: 10px 0 40px;
-  font-size: 16px;
+  font-size: 20px;
   color: azure;
 }
 .hero-btn {
@@ -136,7 +140,7 @@
   color: azure;
   border: 1px solid white;
   padding: 12px 34px;
-  font-size: 13px;
+  font-size: 20px;
   background: transparent;
   position: relative;
   cursor: pointer;
@@ -145,6 +149,7 @@
   border: 1px solid green;
   background: green;
   transition: 1s;
+  color: white;
 }
 
 
@@ -153,7 +158,7 @@
   /*About  UPDATED 3/31/2022*/
   
   .about h6{
-    font-size: 14px;
+    font-size: 20px;
     color: #01012e;
 }
 .about .title-border{
@@ -168,8 +173,12 @@
  margin-left: 35%;
 }
 .about p{
-  font-size: 18px;
+  font-size: 20px;
   color: #01012e;
+
+}
+.projects p{
+  font-size: 20px;
 
 }
 .fas{
@@ -207,6 +216,7 @@
   background: #000;
   box-shadow: 0 10px 10px rgba(157, 255, 0, 0.959);
   cursor: pointer;
+  padding: 20%;
  
 
 }/*Makes a card and 3d effects*/
@@ -240,7 +250,7 @@
   height: 60px;
   background: #fff;
   overflow: hidden;
-  padding: 15px;
+  padding: 10px;
 }
 .project-container:hover .content{
   width: 100%;
@@ -380,7 +390,7 @@ color: #01012e;
   box-sizing:border-box;
   width: 100%;
   text-align: left;
-  font: bold 16px sans-serif;
+  font: bold 20px sans-serif;
   padding: 5px 10px;
 }
 .footer-distributed .footer-left,
